@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>com.swirlds</groupId>
 		<artifactId>swirlds-platform</artifactId>
-		<version>0.26.4-orvw.2</version>
+		<version>0.28.1-orvw.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -46,8 +46,6 @@
 		<eclipse.collections.version>10.4.0</eclipse.collections.version>
 		<mockito.version>${dep.mockito.version}</mockito.version>
 
-		<!--var app.repo is supplied by inheritors. mvn has dynamic var binding not lexical.-->
-		<app.repo>${project.baseUri}../sdk/data/repos/app/</app.repo>
 		<sonar.coverage.jacoco.xmlReportPaths>${sonar.jacoco.path},${sonar.jacoco.alt.path}
 		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
@@ -58,19 +56,19 @@
 		<dependency>
 			<groupId>com.swirlds</groupId>
 			<artifactId>swirlds-common</artifactId>
-			<version>0.26.4-orvw.2</version>
+			<version>0.28.1-orvw.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.swirlds</groupId>
 			<artifactId>swirlds-logging</artifactId>
-			<version>0.26.4-orvw.2</version>
+			<version>0.28.1-orvw.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.swirlds</groupId>
 			<artifactId>swirlds-virtualmap</artifactId>
-			<version>0.26.4-orvw.2</version>
+			<version>0.28.1-orvw.1</version>
 		</dependency>
 
 		<dependency>
@@ -99,14 +97,50 @@
 			<artifactId>log4j-core</artifactId>
 		</dependency>
 
-		
+		<!-- JUnit 5.x -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.swirlds</groupId>
+			<artifactId>swirlds-common-test</artifactId>
+			<version>0.28.1-orvw.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<!-- Profiles -->
 	<profiles>
 		<!-- Automatic Profile (not for manual use) -->
 		<profile>
-			<id>maven_opts_defaults</id>
+			<id>default-variable-maven-opts</id>
 			<activation>
 				<property>
 					<name>!env.MAVEN_OPTS</name>
@@ -116,7 +150,44 @@
 				<env.MAVEN_OPTS/>
 			</properties>
 		</profile>
+
+		<!-- Automatic Profile (not for manual use) -->
+		<profile>
+			<id>default-variable-argLine</id>
+			<activation>
+				<property>
+					<name>!argLine</name>
+				</property>
+			</activation>
+			<properties>
+				<argLine/>
+			</properties>
+		</profile>
 	</profiles>
 
-	
+	<!-- $$BEGIN_OPEN_REVIEW_REMOVE_1$$ -->
+	<!-- Build Configuration -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>@{argLine} ${env.MAVEN_OPTS}
+						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb.collections=ALL-UNNAMED
+						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb.utilities=ALL-UNNAMED
+						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb.files=ALL-UNNAMED
+						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb=ALL-UNNAMED
+					</argLine>
+					<failIfNoTests>true</failIfNoTests>
+					<forkCount>1</forkCount>
+					<reuseForks>true</reuseForks>
+					<useSystemClassLoader>true</useSystemClassLoader>
+					<excludes>
+						<exclude>**/*HammerTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
